--- a/templates/wtc.html
+++ b/templates/wtc.html
@@ -1,14 +1,19 @@
 <html>
 <head>
-<title>Python Flask Upload and display image</title>
+<title>What the cat</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />        
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
-<p><h1 align="center">Python Flask Upload and display image</h1></p>
+<p><h1 align="center">What the cat</h1></p>
 <div class="container">
 <div class="row">
-    <h2>Select a file to upload</h2>
+    {% if not filename %}
+    <h2>Selectionnez une photo de chat</h2>
+    {% endif %}
+    {% if filename %}
+    <h2>Résultat:</h2>
+    {% endif %}
     <p>
         {% with messages = get_flashed_messages() %}
           {% if messages %}
@@ -32,7 +37,7 @@
             </p>
         </dl>
         <p>
-            <input type="submit" value="Submit" class="btn btn-info">
+            <input type="submit" value="&#128077;" class="btn btn-info">
         </p>
     </form>
 </div>
